--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,10 @@
 services:
   - type: web
-    name: sistema-gestion-notas
+    name: sistema-gestion-backend
     env: node
     buildCommand: cd server && npm install
-    startCommand: node server/index.js
+    startCommand: node index.js
+    envVars:
+      - key: NODE_VERSION
+        value: 18.17.1
     rootDir: server
