--- a/render.yaml
+++ b/render.yaml
@@ -1,10 +1,12 @@
 services:
   - type: web
-    name: sistema-gestion-backend
+    name: sistema-gestion-notas
     env: node
-    buildCommand: cd server && npm install
-    startCommand: node index.js
-    envVars:
-      - key: NODE_VERSION
-        value: 18.17.1
+    region: oregon
+    plan: free
     rootDir: server
+    buildCommand: npm install
+    startCommand: npm start
+    envVars:
+      - key: NODE_ENV
+        value: production
